--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "FRAMEWORK/message-board_p24_e04"]
 	path = FRAMEWORK/message-board_p24_e04
 	url = https://github.com/pietow/message-board_p24_e04.git
+[submodule "FRAMEWORK/blog_p24_e04"]
+	path = FRAMEWORK/blog_p24_e04
+	url = https://github.com/pietow/blog_p24_e04.git
