--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "API/todo_p24_04"]
 	path = API/todo_p24_04
 	url = https://github.com/pietow/todo_p24_04.git
+[submodule "API/todo_client_p24_e04"]
+	path = API/todo_client_p24_e04
+	url = https://github.com/pietow/todo_client_p24_e04.git
